<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.fjglezn.identidadpersonalizada.ConfirmarDatos">


    <TextView
        android:id="@+id/tvConfirmacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_datos"
        android:textStyle="bold|italic"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_Top_Confirmar"
        android:textSize="@dimen/confirmar_tamaño"
        />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_nombre"
        android:textStyle="normal|italic"
        android:layout_marginBottom="@dimen/margin_bottom_texto"
        android:layout_marginTop="@dimen/margin_Top_Confirmar"
        android:textSize="@dimen/tamaño_texto"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvFechaNacimientoTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_fecha"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:textSize="@dimen/tamaño_texto"
            />

        <TextView
            android:id="@+id/tvFechaNacimientoValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_fecha"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:layout_marginLeft="@dimen/margin_left_texto"
            android:textSize="@dimen/tamaño_texto"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvTelefonoTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_tel"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:textSize="@dimen/tamaño_texto"
            />

        <TextView
            android:id="@+id/tvTelefonoValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_tel"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:layout_marginLeft="@dimen/margin_left_texto"
            android:textSize="@dimen/tamaño_texto"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvEmailTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_email"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:textSize="@dimen/tamaño_texto"
            />

        <TextView
            android:id="@+id/tvEmailValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_email"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:layout_marginLeft="@dimen/margin_left_texto"
            android:textSize="@dimen/tamaño_texto"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvDescripcionTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_descripcion"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:textSize="@dimen/tamaño_texto"
            />

        <TextView
            android:id="@+id/tvDescripcionValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_descripcion"
            android:textStyle="normal|italic"
            android:layout_marginBottom="@dimen/margin_bottom_texto"
            android:layout_marginTop="@dimen/margin_Top_Confirmar"
            android:layout_marginLeft="@dimen/margin_left_texto"
            android:textSize="@dimen/tamaño_texto"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_Top_Boton"
        android:text="@string/btn_editar"
        android:theme="@style/MiBotonRaised"
        android:onClick="onClickEditar"
    />


</LinearLayout>
