<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    tools:context="com.fjglezn.identidadpersonalizada.MainActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigt_editText"
        android:layout_marginBottom="@dimen/margin_bottom_EditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AppTheme">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="text|textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="onClick">

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_fecha"
            android:theme="@style/MiBotonRaised"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/input_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamañoFecha"
            android:textStyle="bold|italic"
            android:layout_marginLeft="@dimen/margin_left_BotonFecha"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_telefono"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigt_editText"
        android:layout_marginBottom="@dimen/margin_bottom_EditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AppTheme">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefono"
            android:inputType="text|phone"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigt_editText"
        android:layout_marginBottom="@dimen/margin_bottom_EditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AppTheme">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="text|textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigt_editText"
        android:layout_marginBottom="@dimen/margin_bottom_EditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/AppTheme">

        <EditText
            android:id="@+id/input_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_contacto"
            android:inputType="text|textLongMessage"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_Top_Boton"
        android:text="@string/btn_siguiente"
        android:theme="@style/MiBotonRaised"
        android:onClick="onClickSiguiente"
        />

</LinearLayout>
